# word-doc-qa

./: .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  Example_Outputs_Document.md  INDEX.md  QUICKSTART.md  README.md  START_HERE.txt
data/documents/: calendar_2024_2025_2026.docx  semester_info.txt
docs/: PROFESSIONAL_REPORT.md
models/checkpoints/: model_epoch_0.json  model_epoch_1.json  model_epoch_2.json
src/: config.rs  main.rs
src/cli/: ask_command.rs  mod.rs  train_command.rs
src/data/: calendar_parser.rs  dataset.rs  document_loader.rs  mod.rs  splitter.rs  text_cleaner.rs  tokenizer.rs
src/inference/: answer_engine.rs  mod.rs  model_loader.rs  question_processor.rs
src/model/: attention.rs  embeddings.rs  encoder_layer.rs  mod.rs  qa_model.rs  transformer.rs
src/training/: checkpoint.rs  metrics.rs  mod.rs  optimizer.rs  trainer.rs
